# mythes

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  WordNet_readme.txt  aclocal.m4  autogen.sh  configure  configure.ac  example.cxx  makefile.mk  morph.aff  morph.dic  morph.idx  morph.lst  mythes.cxx  mythes.hxx  mythes.pc.in  th_en_US_new.idx  th_gen_idx.pl
