AC_INIT([mythes],[1.2.1],[nemeth@openoffice.org])

AM_INIT_AUTOMAKE(mythes, 1.2.1)

AC_CONFIG_MACRO_DIR([m4])

MYTHES_VERSION_MAJOR=`echo $VERSION | cut -d"." -f1`
MYTHES_VERSION_MINOR=`echo $VERSION | cut -d"." -f2`
AC_SUBST(MYTHES_VERSION_MAJOR)
AC_SUBST(MYTHES_VERSION_MINOR)

AC_CONFIG_HEADER(config.h)

AC_PROG_CC

AC_PROG_CXX

AC_PROG_INSTALL

AC_LIB_RPATH

AC_PROG_LIBTOOL

PKG_CHECK_MODULES(HUNSPELL, [hunspell])

AC_CONFIG_FILES([Makefile mythes.pc])

AC_OUTPUT
